--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         </activity>
         <activity android:name=".ProfilActivity"></activity>
         <activity android:name=".PersoActivity"></activity>
+        <activity android:name=".ShowPersoActivity"></activity>
     </application>
 
 </manifest>
