--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
         <activity android:name=".ProfilActivity" />
         <activity android:name=".PersoActivity" />
         <activity android:name=".ShowPersoActivity" />
-        <activity android:name=".GameActivity"></activity>
+        <activity android:name=".GameActivity" />
+        <activity android:name=".EventsActivity"></activity>
     </application>
 
 </manifest>
